--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   
   firebase_auth: ^3.1.4
   google_sign_in: ^5.2.0
+  cloud_firestore: ^2.5.4
 
 
   # The following adds the Cupertino Icons font to your application.
